# NanoBoyAdvance

./: .gitattributes  .gitignore  3DS_PORTING_MASTER_PLAN.md  CMakeLists.txt  CPU_PORTING_COMPLETE.md  DIAGNOSIS_3DS_ROM_FAILURE.md  MIGRATION_ANALYSIS.md  Makefile  PANDA3DS_EXTERNAL_DEPENDENCIES.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PORTING_PROGRESS_V1.md  absolute_fix.py  amkt.json  apply_fixes.py  arm  bus  cleanup_and_fix.py  comprehensive_fix.py  de.json  debug.json  debuga.json  definitive_fix.py  definitive_solution.py  final_comprehensive_fix.py  final_definitive_fix.py  final_fix.patch  final_fix.py  final_fix_all.py  final_fix_clean.py  final_rel_fix.py  final_relative_fix.py  final_relative_path_fix.py  final_relative_path_fix_v8.py  final_repair.py  final_solution.py  fix_all.py  fix_all_includes_final.py  fix_all_includes_v2.py  (+41 more)
.github/workflows/: ios-build.yml  ios-core-lite.yml  ios-device-app.yml  ios26-ci.yml  main.yml
Config/: Project.plist
boost/serialization/: base_object.hpp  stub.hpp
docs/: gx_static_investigation_2026-04-24.md  hle_gap_report_2026-04-23.md  ios-3ds-crash-investigation.md  render_path_investigation_2026-04-24.md  vfp_neon_gap_report.md
ios/AuroraIOS/: AURAppDelegate.h  AURAppDelegate.mm  AURAppViewController.mm  AURSceneDelegate.m  AURSceneDelegate.mm  AURViewController.h  Metal.h  Metal.m  Metal.mm
ios/AuroraIOS/Controllers/: AURControllerSkinsViewController.h  AURControllerSkinsViewController.m  AUREmulatorViewController.h  AUREmulatorViewController.mm  AURInGameMenuViewController.m  AURLibraryViewController.m  AURLibraryViewController.mm  AURSettingsViewController.m  AURSettingsViewController.mm
ios/AuroraIOS/Managers/: AURBoxArtManager.m  AURDatabaseManager.h  AURDatabaseManager.m  AURDatabaseManager.mm  AURExternalControllerManager.h  AURExternalControllerManager.mm  AURSkinManager.h  AURSkinManager.m  AURSkinManager.mm
ios/AuroraIOS/Models/: AURControllerSkin.h  AURControllerSkin.m  AURControllerSkinTraits.mm  AURDeltaSkin.h  AURDeltaSkin.m  AURDeltaSkin.mm  AURGame.h
ios/AuroraIOS/Views/: AURControllerView.h  AURControllerView.m  AURGameCollectionViewCell.m
ios/ci/: CMakeLists.txt  Info.plist.in
network/artic_base/: artic_base_client.h
reference/: aes_keys.txt  core_timing.h  memory.cpp  memory.h  must-Read.txt
reference/file_sys/: archive_artic.h  archive_backend.h  archive_extsavedata.cpp  archive_extsavedata.h  archive_nand.h  archive_ncch.h  archive_other_savedata.h  archive_savedata.h  archive_sdmc.h  archive_sdmcwriteonly.h  archive_selfncch.cpp  archive_selfncch.h  archive_source_sd_savedata.h  archive_systemsavedata.h  artic_cache.h  delay_generator.h  directory_backend.h  disk_archive.h  file_backend.h  ivfc_archive.h  layered_fs.h  patch.cpp  romfs_reader.h  savedata_archive.h  secure_value_backend.cpp  secure_value_backend.h  secure_value_backend_artic.h
reference/hle/: boost_compat.h  boost_compat_algorithms.cpp  boost_compat_crc.cpp  mii.cpp  mii.h  result.h
reference/hle/kernel/: address_arbiter.cpp  address_arbiter.h  client_port.cpp  client_port.h  client_session.cpp  client_session.h  config_mem.cpp  config_mem.h  event.cpp  event.h  handle_table.h  hle_ipc.cpp  hle_ipc.h  ipc.h  kernel.cpp  kernel.h  memory.cpp  memory.h  mutex.cpp  mutex.h  object.h  process.cpp  process.h  resource_limit.cpp  resource_limit.h  semaphore.cpp  semaphore.h  server_port.cpp  server_port.h  server_session.cpp  server_session.h  session.cpp  session.h  shared_memory.cpp  shared_memory.h  shared_page.cpp  shared_page.h  svc.cpp  svc.h  thread.cpp  (+7 more)
reference/hle/service/: service.cpp  service.h
reference/hw/rsa/: rsa.cpp
reference/video_core/: gpu.h  pica_types.h
reference/video_core/pica/: geometry_pipeline.cpp  geometry_pipeline.h  output_vertex.h  packed_attribute.h  pica_core.h  primitive_assembly.h  regs_lcd.h  shader_setup.h  shader_unit.h
reference/video_core/rasterizer_cache/: rasterizer_cache.h  rasterizer_cache_base.h  surface_base.cpp
reference/video_core/renderer_software/: sw_rasterizer.cpp
reference/video_core/shader/: shader_interpreter.cpp
scripts/: fix_span_includes.py
scripts/ci/: build_mikage_full_ios_device.sh  build_unsigned_ios_device_app.sh  check_no_lua_dependency.sh
src/: linux_sdl_main.cpp
src/core/: README.md  STRUCTURE.md  core_adapter.hpp  core_adapter_registry.cpp  emulator_core_c_api.cpp  emulator_core_c_api.h  gba_core_c_api.cpp  gba_core_c_api.h
src/core/api/: emulator_core_c_api.cpp  emulator_core_c_api.h  frontend_utils.cpp  gba_core_c_api.h
src/core/aurora3ds/: CRYPTO_MIGRATION_STATUS.md  core_adapter.cpp
src/core/citra/: core_adapter.cpp
src/core/cytrus/: CytrusEmulator.h  CytrusEmulator.mm  DEPENDENCY_AUDIT.md
src/core/desume/: Database.cpp  FIFO.h  GPU_Operations.cpp  MMU.h  NDSSystem.cpp  NDSSystem.h  ROMReader.h  SPU.h  arm_jit.cpp  arm_jit.h  cheatSystem.h  commandline.cpp  commandline.h  common.cpp  core_adapter.cpp  debug.h  driver.h  emufile.h  firmware.cpp  firmware.h  gfx3d.h  instructions.h  lua-engine.cpp  mc.h  mem.h  movie.h  path.cpp  path.h  render3D.h  runtime.cpp  runtime.hpp  saves.cpp  slot1.cpp  slot1.h  slot2.cpp  slot2.h  types.h  version.cpp  wifi.cpp  wifi.h  (+2 more)
src/core/gba/: core_adapter.cpp
src/core/melonds/: ARM.cpp  ARM.h  DSi_DSP.cpp  DSi_NAND.cpp  GPU.cpp  GPU2D_Soft.cpp  GPU3D_Soft.cpp  NDS.cpp  Platform.h  SPI.cpp  SPU.cpp  Wifi.cpp  core_adapter.cpp  platform_core.cpp  runtime.cpp  runtime.hpp
src/core/mikage/: CORE_ARM_INTEGRATION.md  CORE_COMPLETION.md  MIKAGE_CORE_ARCHITECTURE.md  MIKAGE_CORE_TESTING_PLAN.md  atomic  condition_variable  core_adapter.cpp  core_adapter_fixed.cpp  errors.json  span  (+1 more)
src/core/mikage/reference/azahar/src/common/: CMakeLists.txt  settings.h
src/core/mikage/reference/azahar/src/common/x64/: cpu_detect.cpp  cpu_detect.h
src/platform/: README.md
tools/: check_desume_nojit_build.sh  cytrus_dependency_guard.py  dump_frames.cpp  frame_capture.cpp  framebuffer_diagnose.cpp  ios_framebuffer_upload_repro.cpp  run_sdl_core_capture.sh
tools/3ds/: aes_keys.txt
(+2694 files in other folders)
