cmake_minimum_required(VERSION 3.24)
project(AuroraIOSCI LANGUAGES C OBJC OBJCXX)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_OBJCXX_STANDARD 20)
set(CMAKE_OBJCXX_STANDARD_REQUIRED ON)

set(APP_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/../AuroraIOS/main.mm
  ${CMAKE_CURRENT_SOURCE_DIR}/../AuroraIOS/AURAppDelegate.mm
  ${CMAKE_CURRENT_SOURCE_DIR}/../AuroraIOS/AURSceneDelegate.mm
)

add_executable(AuroraIOSCI MACOSX_BUNDLE ${APP_SOURCES})

set_target_properties(AuroraIOSCI PROPERTIES
  MACOSX_BUNDLE TRUE
  MACOSX_BUNDLE_GUI_IDENTIFIER com.nanoboyadvance.aurora.ci
  MACOSX_BUNDLE_BUNDLE_NAME AuroraIOSCI
  MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/Info.plist.in
  XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER com.nanoboyadvance.aurora.ci
  XCODE_ATTRIBUTE_TARGETED_DEVICE_FAMILY "1,2"
  XCODE_ATTRIBUTE_INFOPLIST_KEY_UIApplicationSceneManifest_Generation NO
  XCODE_ATTRIBUTE_CODE_SIGNING_ALLOWED NO
  XCODE_ATTRIBUTE_CODE_SIGNING_REQUIRED NO
  XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY ""
  XCODE_ATTRIBUTE_DEVELOPMENT_TEAM ""
)

target_compile_definitions(AuroraIOSCI PRIVATE NBA_CI_MINIMAL_APP=1)
target_compile_options(AuroraIOSCI PRIVATE -fobjc-arc)
target_link_libraries(AuroraIOSCI PRIVATE
  "-framework Foundation"
  "-framework UIKit"
)
